fixed issue with card layout having description text covered by other parts

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -312,11 +312,12 @@ h2:before {
 	overflow: hidden;
 	font-family: $header-font;
 	color: $neon-blue;
+	flex-grow: 1;
 }
 
 .card_description {
     overflow: hidden;
-    flex-grow: 1;
+    flex-grow: 2;
 }
 
 .card_links {
@@ -328,6 +329,7 @@ h2:before {
 	background-color: $lighter-graphite;
 	border-radius: 10px;
 	box-shadow: inset 0 0 5px #000, 0 1px 1px rgba(255, 255, 255, 0.1);
+	flex-grow: 0;
 }
 
 .img_links {
